Video link added

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -44,7 +44,7 @@
               <ul><li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
           </li>
           
-          <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
+          <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a> [ <a href="#" class="video-btn" data-video-id="Lq5tzniN5aw"><span class="unit">Video </span><i class="fa-solid fa-video"></i></a> ]</li>
           <li><span class="unit">Unidad 8: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
               <ul><li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8.1_for_y_while.ipynb">Todo lo que hago con for lo puedo hacer con while</a></li></ul>
           </li>
