Insights bug fix

--- a/links.html
+++ b/links.html
@@ -56,5 +56,8 @@
         <a href="https://www.tiktok.com/@freecodingtour" class="link">Tiktok</a>
         <!-- Add more links as needed -->
     </div>
+
+    <script src="https://getinsights.io/js/insights.js"></script>
+    <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
 </body>
 </html>
