--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -123,6 +123,7 @@
   </div>
 
   <script src="../../../assets/js/script.js"></script>
+  <script src="https://getinsights.io/js/insights.js"></script>
   <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
 
 </body>
