--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="https://getinsights.io/js/insights.js"></script>
   <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
 
 </body>
