Removed urls from contact section

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             Ademas tambien por el grupo de telegram donde puedes compartir dudas con otros estudiantes:</p>
         <p>
             <ul>
-                <li><i class="icon fa-regular fa-envelope"></i>Email: amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
-                <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i>Linkedin: https://www.linkedin.com/in/amiune/</a></li>
-                <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Grupo de Telegram: https://t.me/freecodingtour</a></li>
+                <li><i class="icon fa-regular fa-envelope"></i>amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i>Linkedin</a></li>
+                <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Grupo de Telegram</a></li>
             </ul>
         </p>
     </div>
