--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="../../../assets/img/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../../../assets/css/styles.css">
@@ -93,6 +94,7 @@
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
+          <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </div>
