Added pedacitos de codigo section

--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="../../../assets/img/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../../assets/css/styles.css">
-<title>El Metodo de Aprendizaje de Inteligencia Artificial en FreeCodingTour</title>
+<link rel="stylesheet" href="../../../assets/css/styles.css">
+<title>Pedacitos de Codigo de Programacion</title>
 </head>
 <body>
   <!-- Header Section -->
@@ -25,40 +25,30 @@
     </div>
   </header>
 
-  <!-- Post Section -->
-  <section id="blogpost" class="blogpost container">
-    <h1>El Metodo de Aprendizaje</h1>
-    <div class="blogpost-text">
-        
-        <p>
-            El Metodo de Aprendizaje de Inteligencia Artificial en FreeCodingTour se basa en los siguientes principios: 
-            <ol>
-                <li>
-                  Entender la programacion como: <br>
-                  <b>Entrada -> Proceso -> Salida</b> <br>
-                  donde el Proceso puede ser visto como una caja negra
-                  <img src="./img/entrada-proceso-salida.png" />
-                </li>
-                <li>
-                  Programacion <b>Guiada por Casos de Prueba</b>
-                  <img src="./img/casos-de-prueba.png" />
-                </li>
-                <li>
-                  Entender el Machine Learning como <b>Programacion Automatica</b> 
-                  guiada por Casos de Prueba
-                </li>
-                <li>
-                  Entender el Deep Learning como: <br>
-                  <b>Entrada en Lenguaje Humano -> Proceso -> Salida en Formato Deseado</b> <br>
-                  donde Lenguaje Humano puede ser Texto, Imagenes o Audio
-              </li>
-            </ol>
-        </p>
-        <p>
-            Ultimo parrafo del post con un 
-            <a href="https://www.freecodingtour.com/">link</a> 
-            y aqui termina todo.
-        </p>
+  <!-- Classes Section -->
+  <section id="classes" class="classes container">
+    <div class="classes-info">
+        <h1>Pedacitos de Codigo</h1>
+        <p class="classes-intro">Pedacitos de Codigo para ir aprendiendo programacion poco a poco con ejemplos simples</p>
+
+        <h3>Contenido</h3>
+        <ul>
+          <li><span class="unit">Pedacito 1: </span>
+            <a href="#" class="video-btn" data-video-id="joHrek_5Ndo">
+              <span class="unit">Suma y resta de enteros </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 2: </span>
+            <a href="#" class="video-btn" data-video-id="N0JFC--MU80">
+              <span class="unit">Suma de strings </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 3: </span>
+            <a href="#" class="video-btn" data-video-id="n6EFXBppS1k">
+              <span class="unit">Operador de modulo </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+
     </div>
   </section>
 
@@ -87,6 +77,16 @@
       </div>
     </div>
   </footer>
+
+  <!-- The Modal -->
+  <div id="videoModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+      <iframe width="560" height="315" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+  </div>
+
+  <script src="../../../assets/js/script.js"></script>
   <script src="https://getinsights.io/js/insights.js"></script>
   <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
 
