--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -35,17 +35,17 @@
         <ul>
           <li><span class="unit">Pedacito 1: </span>
             <a href="#" class="video-btn" data-video-id="joHrek_5Ndo">
-              <span class="unit">Suma y resta de enteros </span><i class="fa-solid fa-video"></i>
+              <span>Suma y resta de enteros </span><i class="fa-solid fa-video"></i>
             </a> 
           </li>
           <li><span class="unit">Pedacito 2: </span>
             <a href="#" class="video-btn" data-video-id="N0JFC--MU80">
-              <span class="unit">Suma de strings </span><i class="fa-solid fa-video"></i>
+              <span>Suma de strings </span><i class="fa-solid fa-video"></i>
             </a> 
           </li>
           <li><span class="unit">Pedacito 3: </span>
             <a href="#" class="video-btn" data-video-id="n6EFXBppS1k">
-              <span class="unit">Operador de modulo </span><i class="fa-solid fa-video"></i>
+              <span>Operador de modulo </span><i class="fa-solid fa-video"></i>
             </a> 
           </li>
 
