--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -29,7 +29,15 @@
   <section id="classes" class="classes container">
     <div class="classes-info">
         <h1>Pedacitos de Codigo</h1>
-        <p class="classes-intro">Pedacitos de Codigo para ir aprendiendo programacion poco a poco con ejemplos simples</p>
+        <p class="classes-intro">
+          Pedacitos de Codigo para ir aprendiendo programacion 
+          poco a poco con ejemplos simples.
+          <br>
+          Tambien puedes verlos en 
+          <a href="https://www.tiktok.com/@freecodingtour"><u>TikTok</u></a> 
+          o en 
+          <a href="https://www.instagram.com/freecodingtour/reels/"><u>Instagram Reels</u></a>
+        </p>
 
         <h3>Contenido</h3>
         <ul>
