Added pedacitos de codigo

--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -56,6 +56,56 @@
               <span>Operador de modulo </span><i class="fa-solid fa-video"></i>
             </a> 
           </li>
+          <li><span class="unit">Pedacito 4: </span>
+            <a href="#" class="video-btn" data-video-id="kDum4xJ7Waw">
+              <span>Comparacion booleana </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 5: </span>
+            <a href="#" class="video-btn" data-video-id="NQj25DCXSr4">
+              <span>Comparacion booleana de strings </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 6: </span>
+            <a href="#" class="video-btn" data-video-id="1ma5IowjFEA">
+              <span>Operador or </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 7.1: </span>
+            <a href="#" class="video-btn" data-video-id="pTUNL2l8r9Y">
+              <span>Operador and </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 7.2: </span>
+            <a href="#" class="video-btn" data-video-id="bTHHHY0WbUk">
+              <span>Operador and </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 8: </span>
+            <a href="#" class="video-btn" data-video-id="9qRMrFHww4c">
+              <span>Comparacion strings y tabla ASCII </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 9: </span>
+            <a href="#" class="video-btn" data-video-id="nV0fI_wVHwI">
+              <span>Comparacion strings de mas de 1 simbolo </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 10: </span>
+            <a href="#" class="video-btn" data-video-id="55naUTXlR_c">
+              <span>Condicion compuesta por and y or </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 11: </span>
+            <a href="#" class="video-btn" data-video-id="RHDor64FLcE">
+              <span>Sentencia if </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 12: </span>
+            <a href="#" class="video-btn" data-video-id="4_SlteLf1uM">
+              <span>Sentencia if (2) </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
 
     </div>
   </section>
