Added custom agent link

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -60,6 +60,7 @@
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Chains.ipynb">LangChain Chains</a></li>
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Agents.ipynb">LangChain Agents</a></li>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_CustomAgent.ipynb">LangChain Custom Agent</a></li>
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_RAG.ipynb">LangChain RAG</a></li>
         </ul>
 
