Video links added

--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -88,7 +88,7 @@
           </li>
           <li><span class="unit">Pedacito 9: </span>
             <a href="#" class="video-btn" data-video-id="nV0fI_wVHwI">
-              <span>Comparacion strings de mas de 1 simbolo </span><i class="fa-solid fa-video"></i>
+              <span>Comparar strings de mas de 1 simbolo </span><i class="fa-solid fa-video"></i>
             </a> 
           </li>
           <li><span class="unit">Pedacito 10: </span>
