--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -127,6 +127,7 @@
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
+          <li><a href="https://www.freecodingtour.com/blog/es/blog-indice.html">Blog</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </div>
