--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
   <!-- Introduction Section -->
   <section class="intro container">
-    <h2>Aqui encontraras cursos de programacion faciles y gratuitos 
-        para aprender desde cero sin conocimientos previos y sin 
-        instalar ningun software ni necesitar una computadora especial:</h2>
+    <h2>Cursos de programacion faciles y gratuitos 
+        para aprender desde cero:</h2>
     <ul>
         <li>Totalmente gratuitos.</li>
         <li>Interactivos y sin necesidad 
