Added links to videos

--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -106,6 +106,111 @@
               <span>Sentencia if (2) </span><i class="fa-solid fa-video"></i>
             </a> 
           </li>
+          <li><span class="unit">Pedacito 13: </span>
+            <a href="#" class="video-btn" data-video-id="jZoWo8njsUk">
+              <span>Sentencia if (3) </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 14: </span>
+            <a href="#" class="video-btn" data-video-id="NdH7MYR_TcI">
+              <span>Sentencia if (4) </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 15: </span>
+            <a href="#" class="video-btn" data-video-id="V_Ebq7DLhSI">
+              <span>if y funcion len() </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 16: </span>
+            <a href="#" class="video-btn" data-video-id="rs0QjovD9KI">
+              <span>Sentencia if else </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 17: </span>
+            <a href="#" class="video-btn" data-video-id="4E06dKiXK7s">
+              <span>Sentencia if else (2) </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 18: </span>
+            <a href="#" class="video-btn" data-video-id="An86uEJhHms">
+              <span>Sentencia if else (3) </span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 19: </span>
+            <a href="#" class="video-btn" data-video-id="S0gpX3z6DHo">
+              <span>Sentencia if elif else</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 20: </span>
+            <a href="#" class="video-btn" data-video-id="HEc899i582k">
+              <span>Sentencia if elif else (2)</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 21: </span>
+            <a href="#" class="video-btn" data-video-id="_rTwZj1QzaQ">
+              <span>Sentencia if elif else (3)</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 22: </span>
+            <a href="#" class="video-btn" data-video-id="3BydLbUSvOc">
+              <span>if con and</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 23: </span>
+            <a href="#" class="video-btn" data-video-id="pJriadJf3FQ">
+              <span>if con or</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 24: </span>
+            <a href="#" class="video-btn" data-video-id="gQiMkkmVrmQ">
+              <span>if anidado</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 25: </span>
+            <a href="#" class="video-btn" data-video-id="Dp0shOKb21s">
+              <span>if anidado vs if y and</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 27: </span>
+            <a href="#" class="video-btn" data-video-id="MSNhAFg218M">
+              <span>Operador not</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 28: </span>
+            <a href="#" class="video-btn" data-video-id="VhScKLpazcM">
+              <span>Bucle while</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 29: </span>
+            <a href="#" class="video-btn" data-video-id="-ybZG1kOoh4">
+              <span>Bucle while (2)</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 30: </span>
+            <a href="#" class="video-btn" data-video-id="E4cv87LPVro">
+              <span>Bucle while (3)</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 31: </span>
+            <a href="#" class="video-btn" data-video-id="gw7ZmjI0dZ0">
+              <span>Bucle while infinito</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 32: </span>
+            <a href="#" class="video-btn" data-video-id="_F3K8HN-Oec">
+              <span>Bucle while (4)</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 33: </span>
+            <a href="#" class="video-btn" data-video-id="F2-yKUbLdcQ">
+              <span>Sumar del 1 al 100</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
+          <li><span class="unit">Pedacito 34: </span>
+            <a href="#" class="video-btn" data-video-id="KIU-AAJ1sJ4">
+              <span>Pares del 1 al 100</span><i class="fa-solid fa-video"></i>
+            </a> 
+          </li>
 
     </div>
   </section>
