Added youtube playlist link

--- a/cursos/espanol/programacion/pedacitos-de-codigo.html
+++ b/cursos/espanol/programacion/pedacitos-de-codigo.html
@@ -35,6 +35,8 @@
           <br>
           Tambien puedes verlos en 
           <a href="https://www.tiktok.com/@freecodingtour"><u>TikTok</u></a> 
+          , en
+          <a href="https://www.youtube.com/playlist?list=PL9XeArvMKS4xOJ1naVZN7-gTijzBPYZdp">YouTube</a>
           o en 
           <a href="https://www.instagram.com/freecodingtour/reels/"><u>Instagram Reels</u></a>
         </p>
