Added iterators and generators unit

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -73,6 +73,7 @@
             <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E3_fstrings.ipynb">f Strings</a></li>
             <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E4_list_comprehension.ipynb">List Comprehension</a></li>
             <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E5_id_y_scope.ipynb">Copia de variables y referencias</a></li>
+            <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E6_iterators_generators.ipynb">Iteradores y Generadores</a></li>
         </ul>
 
     </div>
