--- a/links.html
+++ b/links.html
@@ -58,7 +58,15 @@
         <!-- Add more links as needed -->
     </div>
 
-    <script src="https://getinsights.io/js/insights.js"></script>
-    <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Y9SKYR2G8K');
+    </script>    
+
 </body>
 </html>
