--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -117,6 +117,7 @@
   </div>
 
   <script src="../../../assets/js/script.js"></script>
+  <script src="../../../assets/js/chat.js"></script>
   <script src="../../../assets/js/cookie.notice.js"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
