Required courses added

--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -30,7 +30,8 @@
     <div class="classes-info">
         <h1>Ciencia de Datos Coding Tour</h1>
         <p class="classes-intro">Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-          las herramientas de la ciencia de datos en sus respectivas actividades.</p>
+          las herramientas de la ciencia de datos en sus respectivas actividades. Si no sabes programar en Python 
+          comienza primero con el <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Curso de Programacion en Python</a></p>
         <h3>Contenido</h3>
         <ul>
             <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
