--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -31,7 +31,8 @@
         <h1>Inteligencia Artificial Coding Tour</h1>
         <p class="classes-intro">Curso para que personas de diferentes ambitos y 
           formaciones puedan utilizar las herramientas del deep learning en 
-          sus respectivas actividades.</p>
+          sus respectivas actividades. Si no sabes Machine Learning 
+          comienza primero con el <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Curso de Machine Learning</a></p>
 
         <h3>Contenido</h3>
         <ul>
