Removed google analytics script

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <p>
             <ul>
                 <li>
-                    <a target="_blank" href="https://immune.institute/">IMMUNE</a>
-                </li>
+                    <a target="_blank" href="https://immune.institute/?utm_source=freecodingtour&utm_medium=freecodingtour&utm_campaign=freecodingtour">IMMUNE</a>
+                  </li>
             </ul>
         </p>
     </div>
@@ -204,15 +204,6 @@
   </footer>
   
   <script src="./assets/js/cookie.notice.js"></script>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9SKYR2G8K"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-Y9SKYR2G8K');
-  </script>
 
 </body>
 </html>
