--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -49,11 +49,14 @@
         <ul>
             <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
             <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
-            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a></li>
+            <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a>
+              <ul>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb">Zero Shot Classification</a></li>
+              </ul>
+            </li>
             <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
-            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Zero Shot Classification</a>
-            <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
-            <li><span class="unit">Unidad 7: </span>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
+            <li><span class="unit">Unidad 6: </span>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
                 <ul>
                     <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
                     <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
