Change Blog for FAQ

--- a/faq/index.html
+++ b/faq/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <script src="https://unpkg.com/markdown-it@8.4.2/dist/markdown-it.min.js"></script>
-    <title>FreeCodingTour. Blog</title>
+    <title>Preguntas Frecuentes</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
-          <li><a href="https://www.freecodingtour.com/blog/">Blog</a></li>
+          <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </div>
@@ -71,6 +71,6 @@
   </footer>
   
   <script src="../../assets/js/cookie.notice.js"></script>
-  <script src="js/nano-blog.js?v=3"></script>
+  <script src="js/nano-blog.js?v=4"></script>
 </body>
 </html>
