--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -108,7 +108,7 @@
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
-          <li><a href="https://www.freecodingtour.com/blog/">Blog</a></li>
+          <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </div>
