--- a/faq/index.html
+++ b/faq/index.html
@@ -41,6 +41,15 @@
   <!-- Post Section -->
   <section id="blogpost" class="blogpost container">
     <div id="content"></div>
+    <div id="disqus_thread"></div>
+    <script>
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://freecodingtour.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
   </section>
 
   <!-- Footer Section -->
