--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -63,6 +63,7 @@
                     <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
                 </ul>
             </li>
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/8_automl.ipynb">Automatizando el ML</a></li>
         </ul>
 
         <hr class="separator">
