--- a/faq/index.html
+++ b/faq/index.html
@@ -47,11 +47,11 @@
       method="POST"
     >
       <label>
-        Your email:
+        Email:
         <input type="email" name="email">
       </label>
       <label>
-        Your message:
+        Tu Pregunta:
         <textarea name="message"></textarea>
       </label>
       <!-- your other form fields go here -->
