--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p>
             <ul>
                 <li>
-                    <a target="_blank" href="https://immune.institute/?utm_source=freecodingtour&utm_medium=freecodingtour&utm_campaign=freecodingtour">IMMUNE</a>
+                    <a target="_blank" href="https://bit.ly/48DSnFM">IMMUNE</a>
                   </li>
             </ul>
         </p>
